--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,7 +65,7 @@ header .navbar {
   border: 0px;
 }
 header .navbar-brand {
-  padding-top: 1px;
+  padding: 1px 0 1px 0;
 }
 header .navbar-default {
   background: none;
