--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,12 +81,36 @@ header .navbar-default .navbar-nav li a {
 
 /*Slider Start */
 #slider {
+  overflow: hidden;
   background: url("../img/slider_bg_dominik.jpg") no-repeat;
   background-size: cover;
   background-attachment: fixed;
   background-position: 10% 0%;
   padding: 200px 0 280px 0;
   position: relative;
+}
+ video{
+  overflow: hidden;  
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  
+  transform: translate(-50%, -50%);
+ 
+  
+}
+#video_cover {
+  position: absolute;
+ 
+  width: 100%; height: 100%;
+ 
+  background: url("../img/slider_bg_dominik.jpg") no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 #slider:before {
   content: "";
